Update docker compose

--- a/FullAPI.Cinema/wwwroot/index.html
+++ b/FullAPI.Cinema/wwwroot/index.html
@@ -10,6 +10,6 @@
     <div id="employee-container">
 
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
